[gd_scene load_steps=11 format=3 uid="uid://cdejg1jnooprl"]

[ext_resource type="Script" path="res://screens/activities/05/tasks/pronunciation_mechanics.gd" id="1_sjowt"]
[ext_resource type="Texture2D" uid="uid://egqqe6djklih" path="res://assets/images/player/yellow.png" id="2_40psf"]
[ext_resource type="PackedScene" uid="uid://due721y15oqyk" path="res://components/next_button.tscn" id="2_p8qsi"]
[ext_resource type="Script" path="res://scripts/prediction_component.gd" id="2_uetdv"]
[ext_resource type="Texture2D" uid="uid://bb3sqbr251bwp" path="res://assets/images/wooden_platform.png" id="3_y31xh"]
[ext_resource type="FontFile" uid="uid://cogryc0bfmmla" path="res://assets/fonts/Poppins-SemiBold.ttf" id="4_qi13f"]
[ext_resource type="PackedScene" uid="uid://c8kqfmnhflg6m" path="res://components/record_button.tscn" id="7_q2ey4"]

[sub_resource type="Animation" id="Animation_kf0l6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.666956, 0.666957)]
}

[sub_resource type="Animation" id="Animation_lyai3"]
resource_name = "jump"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 1.1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 21.8542), Vector2(0, -10.6459), Vector2(291, -269), Vector2(291, -244.323), Vector2(291, -258.323)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 1.1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.666956, 0.666957), Vector2(0.666956, 0.514663), Vector2(0.666956, 0.741144), Vector2(0.666956, 0.741144), Vector2(0.666956, 0.569179), Vector2(0.666956, 0.66674)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l7eig"]
_data = {
"RESET": SubResource("Animation_kf0l6"),
"jump": SubResource("Animation_lyai3")
}

[node name="PronunciationMechanics" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sjowt")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PredictionComponent" type="HTTPRequest" parent="."]
script = ExtResource("2_uetdv")

[node name="Container" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Platform" type="Sprite2D" parent="Container"]
position = Vector2(208, 714.245)
scale = Vector2(0.631148, 0.631148)
texture = ExtResource("3_y31xh")

[node name="FinalPlatform" type="Sprite2D" parent="Container"]
position = Vector2(498, 460.245)
scale = Vector2(0.631, 0.631)
texture = ExtResource("3_y31xh")

[node name="Label" type="Label" parent="Container/FinalPlatform"]
offset_left = -76.0697
offset_top = -295.159
offset_right = 59.9303
offset_bottom = -12.1593
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("4_qi13f")
theme_override_font_sizes/font_size = 200
text = "a"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player" type="Node2D" parent="Container"]
position = Vector2(203, 605)

[node name="Sprite2D" type="Sprite2D" parent="Container/Player"]
scale = Vector2(0.666956, 0.666957)
texture = ExtResource("2_40psf")

[node name="PlayerAnimator" type="AnimationPlayer" parent="Container/Player"]
libraries = {
"": SubResource("AnimationLibrary_l7eig")
}

[node name="RecordButton" parent="." instance=ExtResource("7_q2ey4")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -361.0
offset_right = 120.0
offset_bottom = -121.0
grow_horizontal = 2
grow_vertical = 0
max_duration = 3.0

[node name="NextButton" parent="." instance=ExtResource("2_p8qsi")]
layout_mode = 1

[connection signal="finished" from="RecordButton" to="." method="_on_record_finished"]
